--- a/Lab1/yeboae.html
+++ b/Lab1/yeboae.html
@@ -29,7 +29,7 @@
 
     <div class="hero">
       <div class="member-number">
-        <div class="weather-vanes-title">V</div>
+        <div class="weather-vanes-title">II</div>
       </div>
       <div class="headshot-and-name">
         <img src="Resources/Manny.Pic.jpg" class = "circular-image" style="aspect-ratio: inherit;" height="300" alt="Emmanuel Yeboah"/>
