--- a/Lab1/montes3.html
+++ b/Lab1/montes3.html
@@ -20,10 +20,10 @@
       <a href="index.html" style="padding: 0px"><div class="wv-monogram">WV</div></a>
       <div class="separating-div"></div>
       <div class="members">MEMBERS</div>
-        <a href="mosquk.html" class="member-1 member-link" data-name="Kat" data-image="Resources/Kat.jpeg" data-info="Member 1">I</a>
+        <a href="mosquk.html" class="member-1 member-link" data-name="Kat" data-image="Resources/kat.jpeg" data-info="Member 1">I</a>
         <a href="yeboae.html" class="member-2 member-link" data-name="Manny" data-image="Resources/Manny.JPG" data-info="Member 2">II</a>
-        <a href="nansam.html" class="member-3 member-link" data-name="MJ" data-image="Resources/MJ.JPG" data-info="Member 3">III</a>
-        <a href="varugr.html" class="member-4 member-link" data-name="Ryan" data-image="Resources/Ryan.png" data-info="Member 4">IV</a>
+        <a href="nansam.html" class="member-3 member-link" data-name="MJ" data-image="Resources/MJ.jpg" data-info="Member 3">III</a>
+        <a href="varugr.html" class="member-4 member-link" data-name="Ryan" data-image="Resources/ryan.png" data-info="Member 4">IV</a>
         <a href="montes3.html" class="member-5 member-link" data-name="Sawyer" data-image="Resources/Sawyer.JPG" data-info="Member 5">V</a>
     </div>
 
