Adding Final Comments

--- a/Lab1/varugr.html
+++ b/Lab1/varugr.html
@@ -13,6 +13,7 @@
 </head>
 
 <body>
+  <!-- This contains my name, headshot, and contact information -->
   <div class="main vcard">
     <div class="picture-stack" style="
         background: url(Resources/dark-souls-larger.png) center;
@@ -85,7 +86,8 @@
 
   <div class="portfolio-information">
 
-
+    
+    <!-- My objective statement and introduction to my resume/page -->
     <div class="introduction">INTRODUCTION</div>
     <div class="introduction-statement">
       <div
@@ -99,7 +101,7 @@
     </div>
 
 
-
+    <!-- Education with dates, instution + secondary (achievements below) -->
     <div class="education">EDUCATION</div>
     <div class="contact-info">
       <div class="text">
@@ -135,7 +137,7 @@
     </div>
 
 
-
+    <!-- All my achievements in college and projects -->
     <div class="projects-accomplishments">PROJECTS &amp; ACCOMPLISHMENTS</div>
     <div class="contact-info">
       <div class="text">
@@ -175,7 +177,7 @@
     </div>
 
 
-
+    <!-- 3 work experience, 2 fake (Apple and TechNova Solutions) -->
     <div class="work-experience">WORK EXPERIENCE</div>
     <div class="contact-info">
       <div class="text">
@@ -244,7 +246,7 @@
 
 
 
-
+    <!-- Skills section, more than 8 skills listed -->
     <div class="skills">SKILLS</div>
     <div class="skills2-ryan">
       <div class="skill-1-skill-2-skill-3-skill-4-skill-5-skill-6-skill-7-skill-8">
