--- a/Lab1/nansam.html
+++ b/Lab1/nansam.html
@@ -28,7 +28,7 @@
         <div class="members">MEMBERS</div>
         <a href="mosquk.html" class="member-1 member-link" data-name="Kat" data-image="Resources/kat.jpeg"
           data-info="Member 1">I</a>
-        <a href="yeboae.html" class="member-2 member-link" data-name="Manny" data-image="Resources/Manny.JPG"
+        <a href="yeboae.html" class="member-2 member-link" data-name="Manny" data-image="Resources/Manny.Pic.jpg"
           data-info="Member 2">II</a>
         <a href="nansam.html" class="member-3 member-link" data-name="MJ" data-image="Resources/MJ.jpg"
           data-info="Member 3">III</a>
