--- a/Lab2/constitution.html
+++ b/Lab2/constitution.html
@@ -563,7 +563,12 @@
           break;
         case 'amendment1':
           title.textContent = 'Amendment I Analysis';
-          content.innerHTML = '<p>Analysis content for Amendment I will go here.</p>';
+          content.innerHTML = '<p>The first amendment secures five freedoms for Americans: religion, speech press, assembly, and petition. It prevents the government from controlling personal beliefs and expression.</p>';
+          content.innerHTML +='<p><b>Freedom Of Religion:</b></p><p> - Separation of Church and State</p><p> - Protects an individual\'s right to practice their religion as they see fit, government can sometimes regulate actions based on those beliefs if they violate a neutral law that applies to everyone.</p>';
+          content.innerHTML +='<p><b>Freedom of Expression:</b></p><p> - Freedom of Speech - Protects the right to express ideas and opinions without government censorship, covers spoken words, symbolic speech, and artistic expression - not absolute. The Supreme Court has recognized limitations, such as incitement to imminent lawless action, defamation, and obscenity.</p>';
+          content.innerHTML +='<p> - Freedom of the Press - Ensures that journalists and media organizations can report news and express opinions without government control or fear of punishment.</p>';
+          content.innerHTML +='<p><b>Freedom of Assembly and Petition:</b></p><p> - Right to Peaceably Assemble - protects the right of people to gather in groups for peaceful and lawful purposes. This includes protests, parades, and demonstrations. government can place reasonable restrictions on the time, place, and manner of assembly.</p>';
+          content.innerHTML +='<p> - Right to Petition - Guarantees the right to formally ask the government for a "redress of grievances," meaning to correct a wrong or to ask for a change in policy.</p>';
           break;
         case 'amendment2':
           title.textContent = 'Amendment II Analysis';
