--- a/Lab2/constitution.html
+++ b/Lab2/constitution.html
@@ -572,7 +572,9 @@
           break;
         case 'amendment2':
           title.textContent = 'Amendment II Analysis';
-          content.innerHTML = '<p>Analysis content for Amendment II will go here.</p>';
+          content.innerHTML = '<p>The Second Amendment protects an individual\'s right to possess firearms, tied to the historical context of maintaining a militia for state security.</p>';
+          content.innerHTML +='<p><b>The Prefatory Clause:</b></p><p>"A well regulated Militia, being necessary to the security of a free State..." This opening has historically been interpreted as linking the right to bear arms directly to service in an organized citizen militia.</p>';
+          content.innerHTML +='<p><b>The Operative Clause:</b></p><p>"...the right of the people to keep and bear Arms, shall not be infringed." This second part has been interpreted as guaranteeing an individual right for citizens to own firearms.</p>';
           break;
         case 'amendment3':
           title.textContent = 'Amendment III Analysis';
