--- a/Lab2/constitution.html
+++ b/Lab2/constitution.html
@@ -578,7 +578,11 @@
           break;
         case 'amendment3':
           title.textContent = 'Amendment III Analysis';
-          content.innerHTML = '<p>Analysis content for Amendment III will go here.</p>';
+          content.innerHTML = '<p>The Third Amendment prohibits the government from forcing citizens to house soldiers in their homes against their will.</p>';
+          content.innerHTML +='<p>This amendment was a direct response to the British Quartering Acts before the American Revolution, which required colonists to provide lodging and supplies for British soldiers. The Founders viewed this practice as a significant intrusion on the sanctity of the home and a tool of oppression.</p>';
+          content.innerHTML +='<p><b>The amendment establishes two distinct rules:</b></p>';
+          content.innerHTML +='<p> - In Peacetime: The government is absolutely forbidden from quartering soldiers in private homes without the owner\'s consent.</p>';
+          content.innerHTML +='<p> - In Wartime: The government may quarter soldiers, but only if Congress passes a law that explicitly outlines the rules and procedures for doing so.</p>';
           break;
         case 'amendment4':
           title.textContent = 'Amendment IV Analysis';
@@ -586,7 +590,18 @@
           break;
         case 'amendment5':
           title.textContent = 'Amendment V Analysis';
-          content.innerHTML = '<p>Analysis content for Amendment V will go here.</p>';
+          content.innerHTML = '<p>The Fifth Amendment establishes several crucial rights for individuals to protect them from arbitrary government power, primarily within the legal system. It guarantees due process of law and other fundamental protections during criminal proceedings.</p>';
+          content.innerHTML +='<p><b>Grand Jury Indictment:</b></p>';
+          content.innerHTML +='<p> - Requires that for a "capital, or otherwise infamous crime" (a serious federal felony), prosecutors must first obtain an indictment from a grand jury. A grand jury is a group of citizens that reviews the evidence to determine if there is enough probable cause to formally charge someone with a crime. This acts as a check on prosecutorial power, preventing the government from bringing baseless charges against a person.</p>';
+          content.innerHTML +='<p><b>Double Jeopardy:</b></p>';
+          content.innerHTML +='<p> - The protection against double jeopardy means that a person cannot be tried for the same crime twice once a verdict has been rendered. If you are acquitted of a crime, the government cannot recharge you and try again with a new jury. Similarly, once you are convicted and sentenced, you cannot be prosecuted again for that exact same offense. This ensures the finality of legal decisions.</p>';
+          content.innerHTML +='<p><b>Self-Incrimination:</b></p>';
+          content.innerHTML +='<p> - This clause grants the right to "plead the Fifth." It means no person can be compelled to be a witness against themself. In a criminal case, you have the right to remain silent and cannot be forced to testify or provide information that might incriminate you. This principle is the basis for the Miranda warning given by police upon arrest.</p>';
+          content.innerHTML +='<p><b>Due Process:</b></p>';
+          content.innerHTML +='<p> - <b>Procedural Due Process:</b> The government must follow fair and established procedures (like providing notice and a hearing) before taking action against an individual.</p>';
+          content.innerHTML +='<p> - <b>Substantive Due Process:</b> This protects certain fundamental rights from government interference, even if the government follows all the correct procedures.</p>';
+          content.innerHTML +='<p><b>Takings Clause:</b></p>';
+          content.innerHTML +='<p> - Grants the government the power of eminent domain (the ability to take private property for public use) such as to build a road, school, or park. However, it places a critical limit on this power: the government must provide "just compensation," which is generally understood to be the fair market value of the property being taken.</p>';
           break;
         case 'amendment6':
           title.textContent = 'Amendment VI Analysis';
