--- a/Lab2/constitution.html
+++ b/Lab2/constitution.html
@@ -564,24 +564,24 @@
         case 'amendment1':
           title.textContent = 'Amendment I Analysis';
           content.innerHTML = '<p>The first amendment secures five freedoms for Americans: religion, speech press, assembly, and petition. It prevents the government from controlling personal beliefs and expression.</p>';
-          content.innerHTML +='<p><b>Freedom Of Religion:</b></p><p> - Separation of Church and State</p><p> - Protects an individual\'s right to practice their religion as they see fit, government can sometimes regulate actions based on those beliefs if they violate a neutral law that applies to everyone.</p>';
-          content.innerHTML +='<p><b>Freedom of Expression:</b></p><p> - Freedom of Speech - Protects the right to express ideas and opinions without government censorship, covers spoken words, symbolic speech, and artistic expression - not absolute. The Supreme Court has recognized limitations, such as incitement to imminent lawless action, defamation, and obscenity.</p>';
+          content.innerHTML +='<p><b>Freedom Of Religion:</b></p><p> - Separation of Church and State</p><p> - Protects an individual\'s right to practice their religion, government can sometimes regulate based on those beliefs if they violate a neutral law.</p>';
+          content.innerHTML +='<p><b>Freedom of Expression:</b></p><p> - Freedom of Speech - Protects the right to express ideas and opinions without censorship, includes spoken words, symbolic speech, and artistic expression. The Supreme Court has limitations, such as incitement to imminent lawless action, defamation, and obscenity so the freedom is not absolute.</p>';
           content.innerHTML +='<p> - Freedom of the Press - Ensures that journalists and media organizations can report news and express opinions without government control or fear of punishment.</p>';
-          content.innerHTML +='<p><b>Freedom of Assembly and Petition:</b></p><p> - Right to Peaceably Assemble - protects the right of people to gather in groups for peaceful and lawful purposes. This includes protests, parades, and demonstrations. government can place reasonable restrictions on the time, place, and manner of assembly.</p>';
+          content.innerHTML +='<p><b>Freedom of Assembly and Petition:</b></p><p> - Right to Peaceably Assemble - Protects the right of people to gather in groups for peaceful and lawful purposes. Includes protests and demonstrations. Government can place reasonable restrictions(time, place, and manner of assembly).</p>';
           content.innerHTML +='<p> - Right to Petition - Guarantees the right to formally ask the government for a "redress of grievances," meaning to correct a wrong or to ask for a change in policy.</p>';
           break;
         case 'amendment2':
           title.textContent = 'Amendment II Analysis';
-          content.innerHTML = '<p>The Second Amendment protects an individual\'s right to possess firearms, tied to the historical context of maintaining a militia for state security.</p>';
-          content.innerHTML +='<p><b>The Prefatory Clause:</b></p><p>"A well regulated Militia, being necessary to the security of a free State..." This opening has historically been interpreted as linking the right to bear arms directly to service in an organized citizen militia.</p>';
-          content.innerHTML +='<p><b>The Operative Clause:</b></p><p>"...the right of the people to keep and bear Arms, shall not be infringed." This second part has been interpreted as guaranteeing an individual right for citizens to own firearms.</p>';
+          content.innerHTML = '<p>The Second Amendment protects an individual\'s right to possess firearms.</p>';
+          content.innerHTML +='<p><b>The Prefatory Clause:</b></p><p>"A well regulated Militia, being necessary to the security of a free State..." Has historically been interpreted as linking the right to bear arms to service in a citizen militia.</p>';
+          content.innerHTML +='<p><b>The Operative Clause:</b></p><p>"...the right of the people to keep and bear Arms, shall not be infringed." Has been interpreted as guaranteeing an individual right for citizens to own firearms.</p>';
           break;
         case 'amendment3':
           title.textContent = 'Amendment III Analysis';
           content.innerHTML = '<p>The Third Amendment prohibits the government from forcing citizens to house soldiers in their homes against their will.</p>';
-          content.innerHTML +='<p>This amendment was a direct response to the British Quartering Acts before the American Revolution, which required colonists to provide lodging and supplies for British soldiers. The Founders viewed this practice as a significant intrusion on the sanctity of the home and a tool of oppression.</p>';
-          content.innerHTML +='<p><b>The amendment establishes two distinct rules:</b></p>';
-          content.innerHTML +='<p> - In Peacetime: The government is absolutely forbidden from quartering soldiers in private homes without the owner\'s consent.</p>';
+          content.innerHTML +='<p>Was a direct response to the British Quartering Acts before the American Revolution, which required colonists to provide lodging and supplies for British soldiers.</p>';
+          content.innerHTML +='<p><b>Establishes two distinct rules:</b></p>';
+          content.innerHTML +='<p> - In Peacetime: The government is forbidden from quartering soldiers in private homes without the owner\'s consent.</p>';
           content.innerHTML +='<p> - In Wartime: The government may quarter soldiers, but only if Congress passes a law that explicitly outlines the rules and procedures for doing so.</p>';
           break;
         case 'amendment4':
@@ -590,18 +590,18 @@
           break;
         case 'amendment5':
           title.textContent = 'Amendment V Analysis';
-          content.innerHTML = '<p>The Fifth Amendment establishes several crucial rights for individuals to protect them from arbitrary government power, primarily within the legal system. It guarantees due process of law and other fundamental protections during criminal proceedings.</p>';
+          content.innerHTML = '<p>The Fifth Amendment establishes several crucial rights for individuals to protect them from government power within the legal system. Guarantees due process of law and other fundamental protections during criminal proceedings.</p>';
           content.innerHTML +='<p><b>Grand Jury Indictment:</b></p>';
-          content.innerHTML +='<p> - Requires that for a "capital, or otherwise infamous crime" (a serious federal felony), prosecutors must first obtain an indictment from a grand jury. A grand jury is a group of citizens that reviews the evidence to determine if there is enough probable cause to formally charge someone with a crime. This acts as a check on prosecutorial power, preventing the government from bringing baseless charges against a person.</p>';
+          content.innerHTML +='<p> - Requires that for a serious federal felony, prosecutors must first obtain an indictment from a grand jury. This acts as a check on prosecutorial power, preventing the government from bringing baseless charges against a person.</p>';
           content.innerHTML +='<p><b>Double Jeopardy:</b></p>';
-          content.innerHTML +='<p> - The protection against double jeopardy means that a person cannot be tried for the same crime twice once a verdict has been rendered. If you are acquitted of a crime, the government cannot recharge you and try again with a new jury. Similarly, once you are convicted and sentenced, you cannot be prosecuted again for that exact same offense. This ensures the finality of legal decisions.</p>';
+          content.innerHTML +='<p> - The protection against double jeopardy means that a person cannot be tried for the same crime twice once a verdict has been rendered. Ensures the finality of legal decisions.</p>';
           content.innerHTML +='<p><b>Self-Incrimination:</b></p>';
-          content.innerHTML +='<p> - This clause grants the right to "plead the Fifth." It means no person can be compelled to be a witness against themself. In a criminal case, you have the right to remain silent and cannot be forced to testify or provide information that might incriminate you. This principle is the basis for the Miranda warning given by police upon arrest.</p>';
+          content.innerHTML +='<p> - This clause grants the right to "plead the Fifth." It means no person can be compelled to be a witness against themself. In a criminal case, you have the right to remain silent and cannot be forced to testify or provide information that might incriminate you.</p>';
           content.innerHTML +='<p><b>Due Process:</b></p>';
           content.innerHTML +='<p> - <b>Procedural Due Process:</b> The government must follow fair and established procedures (like providing notice and a hearing) before taking action against an individual.</p>';
           content.innerHTML +='<p> - <b>Substantive Due Process:</b> This protects certain fundamental rights from government interference, even if the government follows all the correct procedures.</p>';
           content.innerHTML +='<p><b>Takings Clause:</b></p>';
-          content.innerHTML +='<p> - Grants the government the power of eminent domain (the ability to take private property for public use) such as to build a road, school, or park. However, it places a critical limit on this power: the government must provide "just compensation," which is generally understood to be the fair market value of the property being taken.</p>';
+          content.innerHTML +='<p> - Grants the government the power of eminent domain (the ability to take private property for public use) such as to build a road, school, or park. The government must provide "just compensation," typically understood to be the fair market value of the property.</p>';
           break;
         case 'amendment6':
           title.textContent = 'Amendment VI Analysis';
