--- a/Lab2/constitution.html
+++ b/Lab2/constitution.html
@@ -586,7 +586,11 @@
           break;
         case 'amendment4':
           title.textContent = 'Amendment IV Analysis';
-          content.innerHTML = '<p>Analysis content for Amendment IV will go here.</p>';
+          content.innerHTML = '<p>The Fourth Ammendment protects your privacy and property (home, belongings, papers) to searches/seizures without good reason and legal permission in the form of a warrant.</p>';
+          content.innerHTML += "<p><b>Requirements for a warrant:</b></p>";
+          content.innerHTML +='<p> - Must be based on probable cause, meaning a good reason to suspect crime.</p>';
+          content.innerHTML +='<p> - Must be sworn under oath.</p>';
+          content.innerHTML +='<p> - The warrant has to clearly specify what they will search and what they are looking for.</p>';
           break;
         case 'amendment5':
           title.textContent = 'Amendment V Analysis';
