--- a/Lab2/constitution.html
+++ b/Lab2/constitution.html
@@ -621,7 +621,10 @@
           break;
         case 'amendment9':
           title.textContent = 'Amendment IX Analysis';
-          content.innerHTML = '<p>Analysis content for Amendment IX will go here.</p>';
+          content.innerHTML = '<p>The Ninth Amendment determines that the rights of the people are not restricted solely to the ones explicitly described in the Constitution, that is, the presence of those written (enumerated) rights do not invalidate those that are absent.</p>';
+          content.innerHTML += '<p>These absent rights are thought to exist regardless, and the people should not be deprived of them. Conversely, this prevents the government from exercising power beyond what was explicitly given to it.</p>';
+          content.innerHTML += '<p>It was a subject of debate at the time of the Constitution’s ratification whether or not these explicitly described rights should be interpreted as the only rights the American people have, but the Ninth Amendment intended to address this concern.</p>';
+          content.innerHTML += '<p>These unlisted rights, however, remain up to legal interpretation, but are implicitly understood to be fundamental or universal qualities that all humans deserve to have, e.g. bodily autonomy.</p>';
           break;
         case 'amendment10':
           title.textContent = 'Amendment X Analysis';
