--- a/Lab2/constitution.html
+++ b/Lab2/constitution.html
@@ -624,7 +624,7 @@
           content.innerHTML = '<p>The Ninth Amendment determines that the rights of the people are not restricted solely to the ones explicitly described in the Constitution, that is, the presence of those written <b>(enumerated)</b> rights do not invalidate those that are absent.</p>';
           content.innerHTML += '<p>These absent <b>(unenumerated)</b> rights are thought to exist regardless, and the people should not be deprived of them based on a strict interpretation of the Constitution. Conversely, this prevents the government from exercising power beyond what was explicitly given to it.</p>';
           content.innerHTML += '<p>It was a subject of debate at the time of the Constitution’s ratification whether or not the enumerated rights should be interpreted as the only rights the American people have, but the Ninth Amendment sought to clarify that this is not the case.</p>';
-          content.innerHTML += '<p>However, what exactly these unenumerated rights are remain up to legal interpretation. They are implicitly understood to be fundamental or universal qualities that all humans deserve to have, e.g. bodily autonomy.</p>';
+          content.innerHTML += '<p>However, what exactly these unenumerated rights are remains up to legal interpretation. They are implicitly understood to be fundamental or universal qualities that all humans deserve to have, e.g. bodily autonomy.</p>';
           break;
         case 'amendment10':
           title.textContent = 'Amendment X Analysis';
