--- a/Lab2/constitution.html
+++ b/Lab2/constitution.html
@@ -617,7 +617,10 @@
           break;
         case 'amendment8':
           title.textContent = 'Amendment VIII Analysis';
-          content.innerHTML = '<p>Analysis content for Amendment VIII will go here.</p>';
+          content.innerHTML = '<p>The 8th Amendment protects individuals by limiting the government’s ability to impose harsh punishments on them, particularly in the form of excessive payment (bails, fines) or “cruel and unusual punishments”.</p>';
+          content.innerHTML += '<p>In other words, while bails and fines are intended to enforce accountability towards a person, they cannot be disproportionate to the offenses they warrant to the point where they function as punishments. </p>'
+          content.innerHTML += '<p>One such case of this is protection against <u>civil asset forfeiture</u>, in which law enforcement can seize property either suspected or determined to be connected to a crime.</p>'
+          content.innerHTML += '<p>As for cruel and unusual punishments, this is understood to to encompass forms of torture, whether physically barbaric or psychological in nature, or more broadly punishment which causes unnecessary suffering.</p>'
           break;
         case 'amendment9':
           title.textContent = 'Amendment IX Analysis';
