Added Article II Analysis

--- a/Lab2/constitution.html
+++ b/Lab2/constitution.html
@@ -632,7 +632,25 @@
           break;
         case 'article2':
           title.textContent = 'Article II Analysis';
-          content.innerHTML = '<p>Analysis content for Article II will go here.</p>';
+          content.innerHTML = '<p>Article Two addresses the requirements, responsibilities, and processes that the President must uphold and is beholden to.<br/>\
+                              <br/>\
+                              <b>Presidency</b><br/>\
+                              This article ordains executive power to the President of the United States. The President serves a 4-year term, elected together with a Vice President.<br/>\
+                              <br/>\
+                              <b>Election Process</b><br/>\
+                              Each state chooses electors. Electors cannot be members of Congress or federal officials. Electors vote for two people, one of whom cannot be from their own state. Votes are sent to Congress. The person with the majority becomes President; the runner-up becomes Vice President. If there’s a tie or no majority, the House of Representatives chooses the President, with each state delegation having one vote. The Senate chooses the Vice President if needed. Congress is responsible for the timing of elections.<br/>\
+                              <br/>\
+                              <b>Eligibility Requirements</b><br/>\
+                              The President must be a natural-born U.S. citizen (or a citizen at the time of adoption of the Constitution) that is at least 35 years old, and has lived in the U.S. for at least 14 years.<br/>\
+                              <br/>\
+                              <b>Succession</b><br/>\
+                              If the President dies, resigns, is removed, or is otherwise unable to serve, the Vice President takes over. Congress may establish a line of succession beyond the Vice President.<br/>\
+                              <br/>\
+                              <b>Compensation</b><br/>\
+                              The President receives a salary, which cannot change during their term. Furthermore, the President cannot accept any other pay or gifts from the U.S. or individual states.<br/>\
+                              <br/>\
+                              <b>Oath of Office</b><br/>\
+                              Before taking office, the President must swear (or affirm) to faithfully execute the office and preserve, protect, and defend the Constitution.</p>';
           break;
         case 'article3':
           title.textContent = 'Article III Analysis';
