Added Article V Analysis

--- a/Lab2/constitution.html
+++ b/Lab2/constitution.html
@@ -662,7 +662,17 @@
           break;
         case 'article5':
           title.textContent = 'Article V Analysis';
-          content.innerHTML = '<p>Analysis content for Article V will go here.</p>';
+          content.innerHTML = '<p>Article Five outlines the process of making amendments to the Constitution, including the proposal process, ratification, and limitations.<br/>\
+                              <br/>\
+                              <b>Proposal</b><br/>\
+                              With respect to the process of proposing an Amendment, Congress can proceed if two-thirds of both the House and Senate agree. Alternatively, if two-thirds of state legislatures request it, Congress must call a constitutional convention to propose amendments.<br/>\
+                              <br/>\
+                              <b>Ratification</b><br/>\
+                              Proposed amendments become part of the Constitution once three-fourths of the states approve them. States can approve either through their legislatures or through special state conventions, depending on what Congress specifies.<br/>\
+                              <br/>\
+                              <b>Limitations</b><br/>\
+                              Before 1808, no amendments could affect certain clauses in Article I, Section 9 (about the slave trade and direct taxes). Additionally, no state can ever lose its equal representation in the Senate without its consent.<br/>\
+                              </p>';
           break;
         case 'article6':
           title.textContent = 'Article VI Analysis';
