Added 10th Amendment Analysis

--- a/Lab2/constitution.html
+++ b/Lab2/constitution.html
@@ -671,8 +671,7 @@
                               Proposed amendments become part of the Constitution once three-fourths of the states approve them. States can approve either through their legislatures or through special state conventions, depending on what Congress specifies.<br/>\
                               <br/>\
                               <b>Limitations</b><br/>\
-                              Before 1808, no amendments could affect certain clauses in Article I, Section 9 (about the slave trade and direct taxes). Additionally, no state can ever lose its equal representation in the Senate without its consent.<br/>\
-                              </p>';
+                              Before 1808, no amendments could affect certain clauses in Article I, Section 9 (about the slave trade and direct taxes). Additionally, no state can ever lose its equal representation in the Senate without its consent.</p>';
           break;
         case 'article6':
           title.textContent = 'Article VI Analysis';
@@ -752,7 +751,11 @@
           break;
         case 'amendment10':
           title.textContent = 'Amendment X Analysis';
-          content.innerHTML = '<p>Analysis content for Amendment X will go here.</p>';
+          content.innerHTML = '<p>The Tenth Amendment guarantees that any powers not explicitly granted to the federal government by the Constitution, nor denied to the states, are reserved for the states or the people. This principle establishes a system of federalism, where authority is divided between the national government and the states.<br/>\
+                              <br/>\
+                              In practice, this means the federal government is limited to exercising only the powers that the Constitution specifically delegates to it. Some of these powers include regulating interstate commerce, coining money, or conducting foreign affairs. All other areas of governance (education, local policing) generally fall under the jurisdiction of state governments unless otherwise addressed by federal law.<br/>\
+                              <br/>\
+                              This also allows for diverse legislation and policy experimentation across the states. Citizens may therefore experience different laws depending on where they live, reflecting the unique values and priorities of their communities.</p>';
           break;
       }
       
